@@ -1,14 +1,12 @@
 package com.example.demo.alarm.dto;
 
 
-import com.example.demo.account.entity.Account;
 import com.example.demo.alarm.entity.Alarm;
 import lombok.Builder;
 import lombok.Getter;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Builder
 @Getter
@@ -16,17 +14,22 @@ public class AlarmDto {
 
     Long alarmId;
     String name;
-    Account account;
+    Long targetId;
+    String type;
+    Integer importance;
     LocalDateTime createdAt;
     String description;
 
-    public List<AlarmDto> toDtoList(List<Alarm> alarmList) {
-        return alarmList.stream().map(alarm -> AlarmDto.builder()
+    public static List<AlarmDto> toDtoList(List<Alarm> alarmList) {
+        return alarmList.stream().map(alarm ->
+                AlarmDto.builder()
                 .alarmId(alarm.getAlarmId())
-                .account(alarm.getAccount())
                 .name(alarm.getAccount().getName())
-                .createdAt(alarm.getCreatedAt())
+                .description(alarm.getDescription())
+                .type(alarm.getType())
+                .importance(alarm.getImportance())
+                .createdAt(LocalDateTime.now())
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
     }
 }
